simdX86/c2nimsrc/simdSse.h

__m64 _mm_subs_pi16 (__m64 a, __m64 b);
__m64 _mm_subs_pi8 (__m64 a, __m64 b);
__m64 _mm_subs_pu16 (__m64 a, __m64 b);
__m64 _mm_subs_pu8 (__m64 a, __m64 b);
int _mm_test_all_ones (__m128i a);
int _mm_test_all_zeros (__m128i a, __m128i mask);
int _mm_test_mix_ones_zeros (__m128i a, __m128i mask);
int _mm_testc_si128 (__m128i a, __m128i b);
int _mm_testnzc_si128 (__m128i a, __m128i b);
int _mm_testz_si128 (__m128i a, __m128i b);
int _m_to_int (__m64 a);
__int64 _m_to_int64 (__m64 a);
void _MM_TRANSPOSE4_PS (__m128 row0, __m128 row1, __m128 row2, __m128 row3);
int _mm_ucomieq_sd (__m128d a, __m128d b);
int _mm_ucomieq_ss (__m128 a, __m128 b);
int _mm_ucomige_sd (__m128d a, __m128d b);
int _mm_ucomige_ss (__m128 a, __m128 b);
int _mm_ucomigt_sd (__m128d a, __m128d b);
int _mm_ucomigt_ss (__m128 a, __m128 b);
int _mm_ucomile_sd (__m128d a, __m128d b);
int _mm_ucomile_ss (__m128 a, __m128 b);
int _mm_ucomilt_sd (__m128d a, __m128d b);
int _mm_ucomilt_ss (__m128 a, __m128 b);
int _mm_ucomineq_sd (__m128d a, __m128d b);
int _mm_ucomineq_ss (__m128 a, __m128 b);
__m128i _mm_unpackhi_epi16 (__m128i a, __m128i b);
__m128i _mm_unpackhi_epi32 (__m128i a, __m128i b);
__m128i _mm_unpackhi_epi64 (__m128i a, __m128i b);
__m128i _mm_unpackhi_epi8 (__m128i a, __m128i b);
__m128d _mm_unpackhi_pd (__m128d a, __m128d b);
__m64 _mm_unpackhi_pi16 (__m64 a, __m64 b);
__m64 _mm_unpackhi_pi32 (__m64 a, __m64 b);
__m64 _mm_unpackhi_pi8 (__m64 a, __m64 b);
__m128 _mm_unpackhi_ps (__m128 a, __m128 b);
__m128i _mm_unpacklo_epi16 (__m128i a, __m128i b);
__m128i _mm_unpacklo_epi32 (__m128i a, __m128i b);
__m128i _mm_unpacklo_epi64 (__m128i a, __m128i b);
__m128i _mm_unpacklo_epi8 (__m128i a, __m128i b);
__m128d _mm_unpacklo_pd (__m128d a, __m128d b);
__m64 _mm_unpacklo_pi16 (__m64 a, __m64 b);
__m64 _mm_unpacklo_pi32 (__m64 a, __m64 b);
__m64 _mm_unpacklo_pi8 (__m64 a, __m64 b);
__m128 _mm_unpacklo_ps (__m128 a, __m128 b);
__m128d _mm_xor_pd (__m128d a, __m128d b);
__m128 _mm_xor_ps (__m128 a, __m128 b);
__m128i _mm_xor_si128 (__m128i a, __m128i b);
__m64 _mm_xor_si64 (__m64 a, __m64 b);