simdX86/simdSseGeneric.nim

proc subs_pi16*(a: m64; b: m64): m64 {.importc: "_mm_subs_pi16", header: "immintrin.h".}
proc subs_pi8*(a: m64; b: m64): m64 {.importc: "_mm_subs_pi8", header: "immintrin.h".}
proc subs_pu16*(a: m64; b: m64): m64 {.importc: "_mm_subs_pu16", header: "immintrin.h".}
proc subs_pu8*(a: m64; b: m64): m64 {.importc: "_mm_subs_pu8", header: "immintrin.h".}
proc test_all_ones*(a: m128i): cint {.importc: "_mm_test_all_ones",
                                  header: "immintrin.h".}
proc test_all_zeros*(a: m128i; mask: m128i): cint {.importc: "_mm_test_all_zeros",
    header: "immintrin.h".}
proc test_mix_ones_zeros*(a: m128i; mask: m128i): cint {.
    importc: "_mm_test_mix_ones_zeros", header: "immintrin.h".}
proc testc_si128*(a: m128i; b: m128i): cint {.importc: "_mm_testc_si128",
                                        header: "immintrin.h".}
proc testnzc_si128*(a: m128i; b: m128i): cint {.importc: "_mm_testnzc_si128",
    header: "immintrin.h".}
proc testz_si128*(a: m128i; b: m128i): cint {.importc: "_mm_testz_si128",
                                        header: "immintrin.h".}
proc to_int*(a: m64): cint {.importc: "_m_to_int", header: "immintrin.h".}
proc to_int64*(a: m64): int64 {.importc: "_m_to_int64", header: "immintrin.h".}
proc TRANSPOSE4_PS*(row0: m128; row1: m128; row2: m128; row3: m128) {.
    importc: "_MM_TRANSPOSE4_PS", header: "immintrin.h".}
proc ucomieq_sd*(a: m128d; b: m128d): cint {.importc: "_mm_ucomieq_sd",
                                       header: "immintrin.h".}
proc ucomieq_ss*(a: m128; b: m128): cint {.importc: "_mm_ucomieq_ss",
                                     header: "immintrin.h".}
proc ucomige_sd*(a: m128d; b: m128d): cint {.importc: "_mm_ucomige_sd",
                                       header: "immintrin.h".}
proc ucomige_ss*(a: m128; b: m128): cint {.importc: "_mm_ucomige_ss",
                                     header: "immintrin.h".}
proc ucomigt_sd*(a: m128d; b: m128d): cint {.importc: "_mm_ucomigt_sd",
                                       header: "immintrin.h".}
proc ucomigt_ss*(a: m128; b: m128): cint {.importc: "_mm_ucomigt_ss",
                                     header: "immintrin.h".}
proc ucomile_sd*(a: m128d; b: m128d): cint {.importc: "_mm_ucomile_sd",
                                       header: "immintrin.h".}
proc ucomile_ss*(a: m128; b: m128): cint {.importc: "_mm_ucomile_ss",
                                     header: "immintrin.h".}
proc ucomilt_sd*(a: m128d; b: m128d): cint {.importc: "_mm_ucomilt_sd",
                                       header: "immintrin.h".}
proc ucomilt_ss*(a: m128; b: m128): cint {.importc: "_mm_ucomilt_ss",
                                     header: "immintrin.h".}
proc ucomineq_sd*(a: m128d; b: m128d): cint {.importc: "_mm_ucomineq_sd",
                                        header: "immintrin.h".}
proc ucomineq_ss*(a: m128; b: m128): cint {.importc: "_mm_ucomineq_ss",
                                      header: "immintrin.h".}
proc unpackhi_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_unpackhi_epi16",
    header: "immintrin.h".}
proc unpackhi_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_unpackhi_epi32",
    header: "immintrin.h".}
proc unpackhi_epi64*(a: m128i; b: m128i): m128i {.importc: "_mm_unpackhi_epi64",
    header: "immintrin.h".}
proc unpackhi_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_unpackhi_epi8",
    header: "immintrin.h".}
proc unpackhi*(a: m128d; b: m128d): m128d {.importc: "_mm_unpackhi_pd",
                                      header: "immintrin.h".}
proc unpackhi_pi16*(a: m64; b: m64): m64 {.importc: "_mm_unpackhi_pi16",
                                     header: "immintrin.h".}
proc unpackhi_pi32*(a: m64; b: m64): m64 {.importc: "_mm_unpackhi_pi32",
                                     header: "immintrin.h".}
proc unpackhi_pi8*(a: m64; b: m64): m64 {.importc: "_mm_unpackhi_pi8",
                                    header: "immintrin.h".}
proc unpackhi*(a: m128; b: m128): m128 {.importc: "_mm_unpackhi_ps",
                                   header: "immintrin.h".}
proc unpacklo_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_unpacklo_epi16",
    header: "immintrin.h".}
proc unpacklo_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_unpacklo_epi32",
    header: "immintrin.h".}
proc unpacklo_epi64*(a: m128i; b: m128i): m128i {.importc: "_mm_unpacklo_epi64",
    header: "immintrin.h".}
proc unpacklo_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_unpacklo_epi8",
    header: "immintrin.h".}
proc unpacklo*(a: m128d; b: m128d): m128d {.importc: "_mm_unpacklo_pd",
                                      header: "immintrin.h".}
proc unpacklo_pi16*(a: m64; b: m64): m64 {.importc: "_mm_unpacklo_pi16",
                                     header: "immintrin.h".}
proc unpacklo_pi32*(a: m64; b: m64): m64 {.importc: "_mm_unpacklo_pi32",
                                     header: "immintrin.h".}
proc unpacklo_pi8*(a: m64; b: m64): m64 {.importc: "_mm_unpacklo_pi8",
                                    header: "immintrin.h".}
proc unpacklo*(a: m128; b: m128): m128 {.importc: "_mm_unpacklo_ps",
                                   header: "immintrin.h".}
proc `xor`*(a: m128d; b: m128d): m128d {.importc: "_mm_xor_pd", header: "immintrin.h".}
proc `xor`*(a: m128; b: m128): m128 {.importc: "_mm_xor_ps", header: "immintrin.h".}
proc xor_si128*(a: m128i; b: m128i): m128i {.importc: "_mm_xor_si128",
                                       header: "immintrin.h".}
proc xor_si64*(a: m64; b: m64): m64 {.importc: "_mm_xor_si64", header: "immintrin.h".}